forth/test/fail/test_const_fold_redundant_udivmod_one.af
use' ../../lang.af
fun: test_const_fold_redundant_udivmod_one { val -- quo rem } val 1 u/mod end
